--- a/code/01_final_opa.Rmd
+++ b/code/01_final_opa.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "<center><div class= 'mytitle'>Case Study on the Cost Effectiveness of Mass Deworming Interventions</div></center>"
-date: "<center><div class='mysubtitle'>`r format(Sys.time(), '%d %B, %Y')`<br><img height = '200px' src = './shiny_app/www/MAMD_fake_logo.png'></div></center>"
+date: "<center><div class='mysubtitle'>`r format(Sys.time(), '%d %B, %Y')`<br><img height = '200px' src = './shiny_app/www/MAMD_fake_logo.png'><a href = 'http://www.bitss.org/opa/projects/deworming/'><img height = '60px' src = './shiny_app/www/OPA_layers.png'></a></div></center>"
 author: "<center><div class = 'contributors'>Mothers Against Mass Deworming</div></center>"
 editor_options:
   chunk_output_type: console
